# upvote

./: .gitignore  Cargo.toml  Makefile  README.md  TODO.md
.github/workflows/: build.yml
src/: lib.rs  main.rs  models.rs
src/db/: mod.rs  shared.rs  sqlite.rs
src/db/sqlite_constructs/: sqlite_proposal.rs
src/db/sqlite_internals/: mod.rs  sqlite_proposal.rs
src/models/: comment.rs  group.rs  mod.rs  proposal.rs
src/repositories/: mod.rs  proposal_repository.rs
tests/: db_adapter.rs  db_sqlite_adapter.rs  health_check.rs
