[package]
name = "upvote"
version = "0.1.0"
authors = ["Anders Quist <anders.quist@polestar.com>", "Joel Roxell <joel.roxell@polestar.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "upvote"

[dependencies]
actix-web = "4.0.0-beta.8"
log = "0.4.14"
pretty_env_logger = "0.4.0"

[dev-dependencies]
actix-rt = "2"
reqwest = "0.11"
tokio = "1.12.0"
